# clickcrate-test

./: .env.local  .gitignore  README.md  package-lock.json  package.json  tsconfig.base.json
anchor/: Anchor.toml  package-lock.json  package.json
anchor/programs/clickcrate-test/: Cargo.toml
anchor/programs/clickcrate-test/src/: account.rs  context.rs  error.rs  lib.rs
anchor/src/: clickcrate-test-exports.ts  index.ts
anchor/tests/: clickcrate-test.spec.ts
cache/: file-map.json  lockfile.hash  nx_files.nxt  parsed-lock-file.json  project-graph.json
web/: .eslintrc.json  tailwind.config.js  types.ts
web/app/: global.css  layout.tsx
web/app/clickcrate-pos/: page.tsx
web/app/clickcrate-test/: page.tsx
web/app/orders/: page.tsx
web/app/product-listing/: page.tsx
web/app/sample/: i1-1.json  i1-2.json  i2-2.json  pl1.json
web/components/account/: account-detail-feature.tsx  account-ui.tsx
web/components/blinks/: BlinkPreview.tsx
web/components/clickcrate-pos/: clickcrate-pos-data-access.tsx  clickcrate-pos-feature.tsx  clickcrate-pos-ui.tsx
web/components/clickcrate-test/: clickcrate-test-data-access.tsx  clickcrate-test-feature.tsx  clickcrate-test-ui.tsx
web/components/cluster/: cluster-data-access.tsx  cluster-ui.tsx
web/components/dashboard/: dashboard-feature.tsx
web/components/orders/: orders-data-access.tsx  orders-feature.tsx  orders-ui.tsx
web/components/product-listing/: product-listing-data-access.tsx  product-listing-feature.tsx  product-listing-ui.tsx
web/components/solana/: solana-provider.tsx
web/idl/: clickcrate_test.ts
(+6 files in other folders)
