[package]
name = "clickcrate-test"
version = "0.23.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "clickcrate_test"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang =  { version = "0.29.0", features = ["metadata"] }
anchor-spl = "0.29.0"
mpl-core = "0.7.1"
solana-program = "1.18.14"

